# quassel

./: CMakeLists.txt  README  build-bb10
bb10/: bar-descriptor.xml
icons/: CMakeLists.txt  hicolor.qrc
src/: CMakeLists.txt
src/bb10ui/: CMakeLists.txt  bb10ui.cpp  bb10ui.h  bb10uisettings.cpp  bb10uisettings.h  bb10uistyle.cpp  bb10uistyle.h  channellistdatamodel.cpp  channellistdatamodel.h  channellistitem.cpp  channellistitem.h  channellistviewfilter.cpp  channellistviewfilter.h  chatline.cpp  chatline.h  chatlinemodel.cpp  chatlinemodel.h  chatlinemodelitem.cpp  chatlinemodelitem.h  chatlineprovider.cpp  chatlineprovider.h  chatview.cpp  chatview.h  datamodeladapter.cpp  datamodeladapter.h  listitemprovider.cpp  listitemprovider.h  monoapplication.cpp  monoapplication.h  nicklistitem.cpp  nicklistitem.h  nicklistitemprovider.cpp  nicklistitemprovider.h  simplesetuppage.cpp  simplesetuppage.h  uiapplication.cpp  uiapplication.h  uimessageprocessor.cpp  uimessageprocessor.h
src/client/: clientbacklogmanager.cpp
src/common/: logbacktrace_unix.cpp  main.cpp
